Updates to support Ubuntu (#265)
When running java 1.6 from /vnmr/jre, vnmrj errored with "cannot load system
cursor". Switching to use the java 9 installed on ubuntu resulted in error
NoClassDefFoundError for sum.misc.BASE64Encoder, which has been deprecated.
Switched to DatatypeConverter (javax.xml.bind).
Replace csh to bash in vnmrj installer. Fixed several scripts used during
installation.